add files about LightGBM and optuna

--- a/Feature Engineering for House Prices/Feature Engineering for House Prices.ipynb
+++ b/Feature Engineering for House Prices/Feature Engineering for House Prices.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "df2fea95",
    "metadata": {},
    "outputs": [],
@@ -757,6 +757,337 @@
     "        df[name] = df[name].astype(CategoricalDtype(levels,\n",
     "                                                    ordered=True))\n",
     "    return df"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76980d55",
+   "metadata": {},
+   "source": [
+    "### Step 3 - Create Features"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d607c00a",
+   "metadata": {},
+   "source": [
+    "これから特徴量セットの開発を始めます。\n",
+    "\n",
+    "特徴量エンジニアリングのワークフローをよりモジュール化するために、準備済みのデータフレームを受け取り、それを一連の変換パイプラインに通して最終的な特徴量セットを得る関数を定義します。\n",
+    "その関数は次のような形になります："
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db88b00c",
+   "metadata": {},
+   "source": [
+    "```python\n",
+    "def create_features(df):\n",
+    "    X = df.copy()\n",
+    "    y = X.pop(\"SalePrice\")\n",
+    "    X = X.join(create_features_1(X))\n",
+    "    X = X.join(create_features_2(X))\n",
+    "    X = X.join(create_features_3(X))\n",
+    "    # ...\n",
+    "    return X\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4160ea9b",
+   "metadata": {},
+   "source": [
+    "それでは、1つの変換を定義してみましょう。カテゴリ変数に対するラベルエンコーディングです。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "54a7e594",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_encode(df):\n",
+    "    X = df.copy()\n",
+    "    for colname in X.select_dtypes([\"category\"]):\n",
+    "        X[colname] = X[colname].cat.codes\n",
+    "    return X"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b949725c",
+   "metadata": {},
+   "source": [
+    "#### Target Encoding\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68ebf27c",
+   "metadata": {},
+   "source": [
+    "ターゲットエンコーディングを作成するために、別途ホールドアウトセットを用意するのは、データの無駄遣いになりかねません。\n",
+    "\n",
+    "Tutorial 6 では、たった1つの特徴量 Zipcode をエンコードするためだけに、データセットの 25% を使用しました。\n",
+    "\n",
+    "その25%に含まれる他の特徴量のデータは、まったく活用されませんでした。\n",
+    "\n",
+    "しかし、ホールドアウトデータを使わずにターゲットエンコーディングを行う方法があります。\n",
+    "\n",
+    "これはクロスバリデーションで使われるトリックと基本的に同じです：\n",
+    "\n",
+    "1.データをいくつかのフォールド（fold）に分割し、それぞれをさらに2つのスプリットに分ける。\n",
+    "\n",
+    "2.片方のスプリットでエンコーダを学習し、もう片方のスプリットの値を変換する。\n",
+    "\n",
+    "3.すべてのフォールドに対してこの手順を繰り返す。\n",
+    "\n",
+    "このようにすれば、学習と変換は常に独立したデータセット上で行われるため、ホールドアウトセットを使ったときと同じ効果が得られ、しかもデータを無駄にしません。\n",
+    "\n",
+    "次の隠されたセルには、任意のターゲットエンコーダで使用できるラッパーが記述されています。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c505a606",
+   "metadata": {},
+   "source": [
+    "#### Create Final Feature Set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb8e478b",
+   "metadata": {},
+   "source": [
+    "さあ、すべてを組み合わせましょう。変換処理を個別の関数に分けておくことで、さまざまな組み合わせを試しやすくなります。\n",
+    "\n",
+    "コメントを外した関数は、私が試して最も良い結果が得られたものです。\n",
+    "\n",
+    "でも、ぜひあなた自身のアイデアでも試してみてください！これらの変換を修正したり、新たに自分の処理を追加してパイプラインに組み込んでも構いません。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d36af0b4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_features(df, df_test=None):\n",
+    "    X = df.copy()\n",
+    "    y = X.pop(\"SalePrice\")\n",
+    "    mi_scores = make_mi_scores(X, y)\n",
+    "\n",
+    "    # Combine splits if test data is given\n",
+    "    #\n",
+    "    # If we're creating features for test set predictions, we should\n",
+    "    # use all the data we have available. After creating our features,\n",
+    "    # we'll recreate the splits.\n",
+    "    if df_test is not None:\n",
+    "        X_test = df_test.copy()\n",
+    "        X_test.pop(\"SalePrice\")\n",
+    "        X = pd.concat([X, X_test])\n",
+    "\n",
+    "    # Lesson 2 - Mutual Information\n",
+    "    X = drop_uninformative(X, mi_scores)\n",
+    "\n",
+    "    # Lesson 3 - Transformations\n",
+    "    X = X.join(mathematical_transforms(X))\n",
+    "    X = X.join(interactions(X))\n",
+    "    X = X.join(counts(X))\n",
+    "    # X = X.join(break_down(X))\n",
+    "    X = X.join(group_transforms(X))\n",
+    "\n",
+    "    # Lesson 4 - Clustering\n",
+    "    # X = X.join(cluster_labels(X, cluster_features, n_clusters=20))\n",
+    "    # X = X.join(cluster_distance(X, cluster_features, n_clusters=20))\n",
+    "\n",
+    "    # Lesson 5 - PCA\n",
+    "    X = X.join(pca_inspired(X))\n",
+    "    # X = X.join(pca_components(X, pca_features))\n",
+    "    # X = X.join(indicate_outliers(X))\n",
+    "\n",
+    "    X = label_encode(X)\n",
+    "\n",
+    "    # Reform splits\n",
+    "    if df_test is not None:\n",
+    "        X_test = X.loc[df_test.index, :]\n",
+    "        X.drop(df_test.index, inplace=True)\n",
+    "\n",
+    "    # Lesson 6 - Target Encoder\n",
+    "    encoder = CrossFoldEncoder(MEstimateEncoder, m=1)\n",
+    "    X = X.join(encoder.fit_transform(X, y, cols=[\"MSSubClass\"]))\n",
+    "    if df_test is not None:\n",
+    "        X_test = X_test.join(encoder.transform(X_test))\n",
+    "\n",
+    "    if df_test is not None:\n",
+    "        return X, X_test\n",
+    "    else:\n",
+    "        return X\n",
+    "\n",
+    "\n",
+    "df_train, df_test = load_data()\n",
+    "X_train = create_features(df_train)\n",
+    "y_train = df_train.loc[:, \"SalePrice\"]\n",
+    "\n",
+    "score_dataset(X_train, y_train)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "27d323ea",
+   "metadata": {},
+   "source": [
+    "### Step 4 - Hyperparameter Tuning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acc4ad40",
+   "metadata": {},
+   "source": [
+    "この段階では、最終提出を行う前に、XGBoost のハイパーパラメータを調整したくなるかもしれません。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14e47768",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train = create_features(df_train)\n",
+    "y_train = df_train.loc[:, \"SalePrice\"]\n",
+    "\n",
+    "xgb_params = dict(\n",
+    "    max_depth=6,           # maximum depth of each tree - try 2 to 10\n",
+    "    learning_rate=0.01,    # effect of each tree - try 0.0001 to 0.1\n",
+    "    n_estimators=1000,     # number of trees (that is, boosting rounds) - try 1000 to 8000\n",
+    "    min_child_weight=1,    # minimum number of houses in a leaf - try 1 to 10\n",
+    "    colsample_bytree=0.7,  # fraction of features (columns) per tree - try 0.2 to 1.0\n",
+    "    subsample=0.7,         # fraction of instances (rows) per tree - try 0.2 to 1.0\n",
+    "    reg_alpha=0.5,         # L1 regularization (like LASSO) - try 0.0 to 10.0\n",
+    "    reg_lambda=1.0,        # L2 regularization (like Ridge) - try 0.0 to 10.0\n",
+    "    num_parallel_tree=1,   # set > 1 for boosted random forests\n",
+    ")\n",
+    "\n",
+    "xgb = XGBRegressor(**xgb_params)\n",
+    "score_dataset(X_train, y_train, xgb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8bb63686",
+   "metadata": {},
+   "source": [
+    "これらのパラメータを手動で調整するだけでも、優れた結果が得られることがあります。しかし、scikit-learn の自動ハイパーパラメータチューナーの1つを試してみるのも良いかもしれません。あるいは、より高度なチューニングライブラリである Optuna や scikit-optimize を試してみることもできます。\n",
+    "\n",
+    "以下は、XGBoost で Optuna を使う方法の一例です："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "567498e6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import optuna\n",
+    "\n",
+    "def objective(trial):\n",
+    "    xgb_params = dict(\n",
+    "        max_depth=trial.suggest_int(\"max_depth\", 2, 10),\n",
+    "        learning_rate=trial.suggest_float(\"learning_rate\", 1e-4, 1e-1, log=True),\n",
+    "        n_estimators=trial.suggest_int(\"n_estimators\", 1000, 8000),\n",
+    "        min_child_weight=trial.suggest_int(\"min_child_weight\", 1, 10),\n",
+    "        colsample_bytree=trial.suggest_float(\"colsample_bytree\", 0.2, 1.0),\n",
+    "        subsample=trial.suggest_float(\"subsample\", 0.2, 1.0),\n",
+    "        reg_alpha=trial.suggest_float(\"reg_alpha\", 1e-4, 1e2, log=True),\n",
+    "        reg_lambda=trial.suggest_float(\"reg_lambda\", 1e-4, 1e2, log=True),\n",
+    "    )\n",
+    "    xgb = XGBRegressor(**xgb_params)\n",
+    "    return score_dataset(X_train, y_train, xgb)\n",
+    "\n",
+    "study = optuna.create_study(direction=\"minimize\")\n",
+    "study.optimize(objective, n_trials=20)\n",
+    "xgb_params = study.best_params"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94964691",
+   "metadata": {},
+   "source": [
+    "これをコードセルにコピーすれば使用できますが、実行にはかなり時間がかかることに注意してください。\n",
+    "実行が終わったら、Optuna の可視化機能を使ってみるのも楽しいかもしれません。"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff32dbcf",
+   "metadata": {},
+   "source": [
+    "### Step5 - Train Model and Create Submissions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79a726f9",
+   "metadata": {},
+   "source": [
+    "すべてに満足したら、いよいよ最終予測を作成する時です！このセルでは以下の処理を行います：\n",
+    "\n",
+    "- 元のデータから特徴量セットを作成する\n",
+    "\n",
+    "- 学習データでXGBoostをトレーニングする\n",
+    "\n",
+    "- 訓練済みモデルを使ってテストセットから予測を行う\n",
+    "\n",
+    "- 予測結果をCSVファイルとして保存する"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "aafa5822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train, X_test = create_features(df_train, df_test)\n",
+    "y_train = df_train.loc[:, \"SalePrice\"]\n",
+    "\n",
+    "xgb = XGBRegressor(**xgb_params)\n",
+    "# XGB minimizes MSE, but competition loss is RMSLE\n",
+    "# So, we need to log-transform y to train and exp-transform the predictions\n",
+    "xgb.fit(X_train, np.log(y))\n",
+    "predictions = np.exp(xgb.predict(X_test))\n",
+    "\n",
+    "output = pd.DataFrame({'Id': X_test.index, 'SalePrice': predictions})\n",
+    "output.to_csv('my_submission.csv', index=False)\n",
+    "print(\"Your submission was successfully saved!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c3c908e0",
+   "metadata": {},
+   "source": [
+    "これらの予測をコンペティションに提出するには、次の手順に従ってください：\n",
+    "\n",
+    "1.画面右上の青い Save Version ボタンをクリックします。ポップアップウィンドウが表示されます。\n",
+    "\n",
+    "2.Save and Run All オプションが選択されていることを確認し、青い Save ボタンをクリックします。\n",
+    "\n",
+    "3.これにより、ノートブックの左下にウィンドウが生成されます。実行が完了したら、Save Version ボタンの右にある番号をクリックします。画面右側にバージョンの一覧が表示されます。最新バージョンの右にある省略記号（...）をクリックし、Open in Viewer を選択します。これにより、同じページのビューアモードに移動します。再びこの説明に戻るには、ページをスクロールする必要があります。\n",
+    "\n",
+    "4.画面右側の Output タブをクリックします。次に、提出したいファイルをクリックし、青い Submit ボタンをクリックして、リーダーボードに結果を提出します。\n",
+    "\n",
+    "これでコンペティションへの提出が完了しました！"
    ]
   }
  ],
